# bmpf2

./: CLAUDE.md  Cargo.toml  INTERNALS.md  README.md  REVIEW.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
benches/: bench.rs
docs/: katex.html
examples/: quick_start.rs
src/: first_uniform.rs  lib.rs  main.rs  resample.rs  sorted_uniforms.rs
tests/: statistical.rs
