[package]
name = "ltsis"
version = "0.1.0"
edition = "2021"
authors = [
    "Bart Massey <bart.massey@gmail.com>",
    "Claude <noreply@anthropic.com>",
]
description = "Linear-time perfect weighted resampling for sequential importance sampling with replacement"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BartMassey/ltsis"
documentation = "https://docs.rs/ltsis"
readme = "README.md"
keywords = ["sampling", "resampling", "monte-carlo", "statistics", "no-std"]
categories = ["mathematics", "no-std", "algorithms"]
exclude = ["HANDOFF.md"]

[features]
# Default: std. Library uses `f32::powf` (in `first_uniform`) and
# `Exp1` Ziggurat sampling (in `resample_indices_buffered`); both need
# either std or libm to provide the underlying math routines.
default = ["std"]

# `std`: pulls in std's libm bindings via num-traits, plus rand's
# stdlib integration (StdRng, Standard distribution etc.). Required to
# build the `tests` binary.
std = ["num-traits/std", "rand/std", "rand/std_rng", "rand_distr/std"]

# `libm`: routes transcendental math (`powf`, etc.) through the `libm`
# crate via `num-traits`. Use this in `no_std` builds; enable exactly
# one of `std` or `libm`.
libm = ["num-traits/libm"]

[dependencies]
num-traits = { version = "0.2", default-features = false }
rand = { version = "0.8", default-features = false }
rand_distr = { version = "0.4", default-features = false }

[[bin]]
name = "tests"
path = "src/bin/tests.rs"
# The driver uses Vec, Instant, println!, StdRng — std-only. Hide it
# from no_std builds so they don't try (and fail) to compile it.
required-features = ["std"]

[lib]
name = "ltsis"
path = "src/lib.rs"
