[package]
name = "ltsis"
version = "0.1.0"
edition = "2021"
# Tracks the highest MSRV among our direct dependencies. `rand` 0.10
# and `rand_distr` 0.6 both declare `rust-version = "1.85"`; nothing
# in our own code requires anything newer.
rust-version = "1.85"
authors = [
    "Bart Massey <bart.massey@gmail.com>",
    "Claude <noreply@anthropic.com>",
]
description = "Linear-time perfect weighted resampling for sequential importance sampling with replacement"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BartMassey/ltsis"
documentation = "https://docs.rs/ltsis"
readme = "README.md"
keywords = ["sampling", "resampling", "monte-carlo", "statistics", "no-std"]
categories = ["mathematics", "no-std", "algorithms"]

[features]
# Default: std. Library uses `f32::powf` (in `first_uniform`) and
# `Exp1` Ziggurat sampling (in `resample_indices_buffered`); both need
# either std or libm to provide the underlying math routines.
default = ["std"]

# `std`: pulls in std's libm bindings via num-traits, plus rand's
# stdlib integration. Also required by the integration tests and
# benchmark harness.
#
# We deliberately do NOT enable `rand/std_rng`: that feature would
# pull in the ChaCha20 cipher chain to provide `StdRng`, which is
# overkill for a non-cryptographic resampling library. Tests, benches,
# and the example use `rand::rngs::SmallRng` (Xoshiro256++) instead;
# `SmallRng` is always available in rand 0.10 with no feature flag.
std = ["num-traits/std", "rand/std", "rand_distr/std"]

# `libm`: routes transcendental math (`powf`, etc.) through the `libm`
# crate via `num-traits`. Use this in `no_std` builds; enable exactly
# one of `std` or `libm`.
libm = ["num-traits/libm"]

[dependencies]
num-traits = { version = "0.2", default-features = false }
rand = { version = "0.10", default-features = false }
rand_distr = { version = "0.6", default-features = false }

# Microbenchmark with a hand-rolled `fn main()` and our own timing
# (`harness = false` disables the unstable `#[bench]` harness). Run
# with `cargo bench`.
[[bench]]
name = "bench"
harness = false

[lib]
name = "ltsis"
path = "src/lib.rs"

# docs.rs builds the published crate with default features only by
# default. Build with all features so users browsing the rendered
# docs see both `std` and `libm` configurations documented.
[package.metadata.docs.rs]
all-features = true
